fixed uneven projects section & added new project

--- a/style.css
+++ b/style.css
@@ -213,9 +213,12 @@ content div {
 }
 
 .project {
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    /* height: 2em; */
 }
 
 .project a {
@@ -247,8 +250,8 @@ content div {
 
 .project img {
     margin-top: 2em;
-    width: 90%;
-    height: 90%;
+    width: 20em;
+    height: 14em;
     border-radius: 5px;
     transition: .3s;
 }
@@ -258,11 +261,17 @@ content div {
     
 }
 
-
+.desc {
+    width: 100%;
+}
 
 
 footer {
     padding: 6em 0 6em 0;
+}
+
+.projects-container {
+    margin: auto;
 }
 
 .socials-container {
@@ -299,10 +308,25 @@ footer {
     color: rgb(168, 168, 168);
 }
 
+.project-information {
+    display: inline-block !important;
+    
+}
 
+.project-group {
+    width: 100%;
+}
 
 
 @media (min-width: 767.99px) { 
+
+    .project img {
+        margin-top: 2em;
+        width: 12.5em;
+        height: 9em;
+        border-radius: 5px;
+        transition: .3s;
+    }
 
     content div {
         max-width: 1200px;
@@ -310,13 +334,15 @@ footer {
     }
 
     .project-group  {
-        display: inline-flex !important;
-        flex-direction: row !important;
+        /* display: inline-flex !important;
+        flex-direction: row !important; */
         /* align-items: center; */
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
         /* width: 50%; */
-    justify-content: center;
-        align-items: center;
+    /* justify-content: center; */
+        /* align-items: center; */
+        display: inline-block;
+        margin-top: 4em;
         
     }
 
@@ -331,7 +357,7 @@ footer {
 
        margin: 0 .5em;
        
-        
+       
     }
     
     .project-name {
@@ -357,7 +383,7 @@ footer {
         /* padding: 0; */
         /* background-color: aqua; */
         display: flex;
-        align-items: center;
+        /* align-items: center; */
         margin: auto;
 
     }
